# client-server-app

./: CMakeLists.txt  README.md  monday.txt
src/: client.cpp  error.hpp  server.cpp  server_functions.hpp
tests/: CMakeLists.txt  test.cpp
